--- a/CPP_Reflection/CPP_Reflection.vcxproj
+++ b/CPP_Reflection/CPP_Reflection.vcxproj
@@ -80,10 +80,21 @@
   <ItemGroup>
     <ClInclude Include="Any.h" />
     <ClInclude Include="AnyTest.h" />
+    <ClInclude Include="expression.h" />
+    <ClInclude Include="ExpressionTest.h" />
+    <ClInclude Include="Indices.h" />
+    <ClInclude Include="MacroHelpers.h" />
+    <ClInclude Include="Meta.h" />
+    <ClInclude Include="MetaTest.h" />
+    <ClInclude Include="MetaUtil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnyTest.cpp" />
+    <ClCompile Include="ExpressionTest.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Meta.cpp" />
+    <ClCompile Include="MetaTest.cpp" />
+    <ClCompile Include="MetaUtil.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
