Fixed member variable type pointers. The storage vector was reallocating. Created static_vector to reserve space on construction. Need to make it prevent reallocation later.

--- a/CPP_Reflection/CPP_Reflection.vcxproj
+++ b/CPP_Reflection/CPP_Reflection.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="MetaProgrammingTests.h" />
     <ClInclude Include="MetaTest.h" />
     <ClInclude Include="MetaUtil.h" />
+    <ClInclude Include="static_vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnyTest.cpp" />
