--- a/CPP_Reflection/CPP_Reflection.vcxproj.filters
+++ b/CPP_Reflection/CPP_Reflection.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MetaProgrammingTests.h">
       <Filter>Tests</Filter>
     </ClInclude>
+    <ClInclude Include="static_vector.h">
+      <Filter>Meta</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnyTest.cpp">
